--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -114,6 +114,11 @@ header a:hover {
 /* Gallery */
 .gallery-container {
   padding: 2rem 1rem;
+  border-bottom: 1px solid var(--darkblue);
+}
+
+.gallery-container-bottom {
+  border-bottom: none;
 }
 
 .gallery-container h3 {
@@ -127,7 +132,7 @@ header a:hover {
 }
 
 .gallery .img-container {
-  margin: 0.3rem;
+  margin: 0 0.3rem;
   min-width: 250px;
   max-width: 24%;
 }
